@@ -1,0 +1,4 @@
+<?php
+
+$messages['hello_world'] = 'Welcome, this is a message';
+$messages['field_1'] = 'A test field';
