@@ -1,0 +1,4 @@
+<?php
+
+$messages['hello_world'] = 'Benvenuto, questo è un messaggio';
+$messages['field_1'] = 'Campo di prova';
