@@ -1,0 +1,10 @@
+<?php
+
+class sample_i18n extends p4a
+{
+	function sample_i18n()
+	{
+		parent::p4a();
+		$this->openMask('mask1');
+	}
+}
