@@ -61,12 +61,12 @@
 		function P4A_I18N_Messages($language, $country)
 		{
 			$msg_file = "{$language}/{$country}.php";
-			include(dirname(__FILE__) . "/messages/{$msg_file}");
+			include dirname(__FILE__) . "/messages/{$msg_file}";
 
 			$application_localization = P4A_APPLICATION_LOCALES_DIR . "/{$msg_file}";
 
 			if (file_exists($application_localization)) {
-				include($application_localization );
+				include $application_localization;
 			}
 
 			$this->messages = $messages;
