@@ -2,6 +2,8 @@
 - PEAR was updated to 1.5.0
 - phpThumb was updated to 1.7.7
 - P4A_Table_Rows::disable() is now correctly handled
+- P4A_Widget::setDefaultLabel now automatically looks within translations
+- a new sample (sample_i18n) was added to show how to localize your applications
 
 1.99.16
 - masks icons are rendered only if not on handheld
